# supertaskRK2

./: .travis.yml  CMakeLists.txt  CPackConfig.cmake  Dockerfile  README.md  Vagrantfile
cmake/: HunterGate.cmake
examples/: demo.cpp
include/: sqrt.h
sources/: sqrt.cpp
tests/: test.cpp
